Added whatsapp button

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
           <button id="download-button" class="download-button">
             הורד קולאז'
           </button>
+          <button id="whatsapp-button" class="whatsapp-button">
+            שתף לווטסאפ
+          </button>
           <button id="new-button" class="new-button">צור קולאז' חדש</button>
         </div>
       </div>
