Add share functionality and improve collage features
- Add share button with WhatsApp integration and Web Share API support
- Implement automatic image orientation detection (landscape vs portrait)
- Fix image upload functionality that was broken due to syntax errors
- Add dynamic text handling - collages without text don't allocate text space
- Improve responsive design for mobile devices
- Update translations for share button (Hebrew: שיתוף, English: Share)
- Fix footer positioning and layout issues
- Add success icons for uploaded images
- Enhance RTL/LTR image positioning based on language
- Clean up code and remove debug logs

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             הורד קולאז'
           </button>
           <button id="whatsapp-button" class="whatsapp-button">
-            שתף לווטסאפ
+            שיתוף
           </button>
           <button id="new-button" class="new-button">צור קולאז' חדש</button>
         </div>
